kind/test-ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-1
  labels:
    app: test-1
spec:
  containers:
  - name: test-1
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=OK"
---
kind: Service
apiVersion: v1
metadata:
  name: test-1-service
spec:
  selector:
    app: test-1
  ports:
  - port: 5678

---
kind: Pod
apiVersion: v1
metadata:
  name: test-2
  labels:
    app: test-2
spec:
  containers:
  - name: test-2
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=OK2"
---
kind: Service
apiVersion: v1
metadata:
  name: test-2-service
spec:
  selector:
    app: test-2
  ports:
  - port: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: test-1-service
            port:
              number: 5678
      - pathType: Prefix
        path: "/test2"
        backend:
          service:
            name: test-2-service
            port:
              number: 5678
